# vk_in_terminal

./: .gitignore  CMakeLists.txt
include/: app.hpp  ascii_converter.hpp  logger.hpp  longpoll.hpp  ui_console.hpp  vk_api.hpp
src/: app.cpp  ascii_converter.cpp  longpoll.cpp  main.cpp  ui_console.cpp  vk_api.cpp
